k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-cool-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-cool-service
  template:
    metadata:
      labels:
        app: my-cool-service
    spec:
      containers:
      - name: my-cool-service
        image: my-cool-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: my-cool-service
spec:
  selector:
    app: my-cool-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
