k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-cool-service-ingress
spec:
  rules:
    - host: my-cool-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-cool-service
                port:
                  number: 8000
